--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script src="/public/a.js"></script>
+    <script src="/public/b.js"></script>
+
   </body>
 </html>
